--- a/doiet/package.json
+++ b/doiet/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "doiet",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -33,8 +33,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
